--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -14,10 +14,25 @@
         android:layout_height="match_parent"
         tools:context="com.carlitosdroid.basicgooglemapsample.MapsActivity" />
 
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/btnPermission"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="permission"/>
+        android:layout_gravity="bottom">
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btnLocationPermission"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="location"
+            android:layout_weight="1" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btnCameraPermission"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="camera"
+            android:layout_weight="1" />
+    </LinearLayout>
 </FrameLayout>
 
