--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -21,34 +21,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_test"
-        android:id="@+id/include" />
+    <include layout="@layout/content_test" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabRecordAudioPermission"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@color/md_teal_500"
-        app:srcCompat="@drawable/ic_mic_off_white_24dp" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabLocationPermission"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:layout_gravity="top|right"
-        app:backgroundTint="@color/md_blue_500"
-        app:srcCompat="@drawable/ic_location_on_white_24dp"
-        app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="bottom|left" />
+        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
-
-
-
-
-
-
-
