--- a/app/src/main/res/layout/content_maps.xml
+++ b/app/src/main/res/layout/content_maps.xml
@@ -2,18 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_test"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.carlitosdroid.basicgooglemapsample.TestActivity"
-    tools:showIn="@layout/activity_test">
+    tools:context="com.carlitosdroid.basicgooglemapsample.MapsActivity"
+    tools:showIn="@layout/activity_maps">
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.carlitosdroid.basicgooglemapsample.MapsActivity" />
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
