--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -41,6 +41,15 @@
         app:backgroundTint="@color/md_blue_500"
         app:srcCompat="@drawable/ic_location_on_white_24dp" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="@color/md_orange_400"
+        app:srcCompat="@drawable/ic_location_on_white_24dp" />
+
 </android.support.design.widget.CoordinatorLayout>
 
 
